# agentic-shell

./: .env.example  .gitignore  README.md  agsh  ai_brain.py  config.py  install.sh  lightning_client.py  main.py  mode_handlers.py  pyproject.toml  requirements.txt  server.py  socket_handlers.py  start.sh
LightningAI/: deploy_api.py  lightning_unified_backend.py  merge_and_save.py  pipeline.py  qwen_adapter.py  retraining.py  train_bash_agent.py
static/: index.html  main.js  style.css
utils/: __init__.py  logger.py  messaging.py  terminal_utils.py
