[project]
name = "agentic-shell"
version = "0.1.0"
description = "An AI-powered terminal assistant that runs in your browser, combining a traditional command-line with intelligent execution modes, multi-language voice support, and a real-time chat interface."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "python-dotenv==1.0.1",
    "python-socketio==5.11.2",
]
